--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Comparador Tibia Coin</title>
+<title>Comparador RubinOT</title>
+
 <style>
 body{
-    font-family: Arial, sans-serif;
+    font-family: Arial;
     background:#0f172a;
     color:white;
-    margin:0;
     padding:20px;
 }
-h1{
-    text-align:center;
-}
+h1{text-align:center;}
 .container{
     max-width:900px;
     margin:auto;
@@ -23,25 +21,24 @@ h1{
     border-radius:12px;
 }
 input{
+    width:100%;
     padding:8px;
     margin:5px 0;
     border-radius:6px;
     border:none;
-    width:100%;
 }
 button{
     padding:10px;
     border:none;
     border-radius:8px;
     background:#22c55e;
-    color:black;
     font-weight:bold;
     cursor:pointer;
 }
 .world{
     background:#334155;
     padding:15px;
-    margin-top:10px;
+    margin-top:15px;
     border-radius:10px;
 }
 .result{
@@ -50,37 +47,20 @@ button{
     padding:15px;
     border-radius:10px;
 }
-.best{
-    color:#22c55e;
-    font-weight:bold;
-}
 </style>
 </head>
 <body>
 
-<h1>Comparador de Mundos - Tibia</h1>
+<h1>Comparador RubinOT</h1>
 
 <div class="container">
-
-<label>Preço do Item (em KK):</label>
-<input type="number" id="itemPrice" placeholder="Ex: 300">
-
-<label>Valor da Tibia Coin em Reais (R$):</label>
-<input type="number" id="tcReais" placeholder="Ex: 0.28" step="0.01">
-
-<label>
-<input type="checkbox" id="includeTransfer">
-Incluir Transfer (750 TC)
-</label>
-
-<hr>
 
 <div id="worlds"></div>
 
 <button onclick="addWorld()">Adicionar Mundo</button>
 <button onclick="calculate()">Calcular</button>
 
-<div class="result" id="results"></div>
+<div id="results" class="result"></div>
 
 </div>
 
@@ -93,61 +73,79 @@ function addWorld(){
     div.className="world";
     div.innerHTML = `
         <h3>Mundo ${worldCount}</h3>
-        <label>Nome do Mundo:</label>
-        <input type="text" id="worldName${worldCount}" placeholder="Ex: Belobra">
 
-        <label>Preço da TC nesse mundo (em gold):</label>
-        <input type="number" id="tcPrice${worldCount}" placeholder="Ex: 50000">
+        <label>Nome do Mundo:</label>
+        <input type="text" id="name${worldCount}" placeholder="Ex: Draco">
+
+        <label>Preço da Tibia Coin (em gold):</label>
+        <input type="number" id="tcGold${worldCount}" placeholder="Ex: 50000">
+
+        <label>Valor do Item (em KK):</label>
+        <input type="number" id="itemKK${worldCount}" placeholder="Ex: 300">
+
+        <label>Valor atual de 25 Coins (R$):</label>
+        <input type="number" id="coin25${worldCount}" placeholder="Ex: 2.35" step="0.01">
+
+        <label>
+            <input type="checkbox" id="transfer${worldCount}">
+            Incluir Transfer (990 Coins)
+        </label>
     `;
     document.getElementById("worlds").appendChild(div);
 }
 
 function calculate(){
-    const itemKK = parseFloat(document.getElementById("itemPrice").value);
-    const tcReais = parseFloat(document.getElementById("tcReais").value);
-    const includeTransfer = document.getElementById("includeTransfer").checked;
 
-    if(!itemKK || !tcReais){
-        alert("Preencha os valores principais!");
-        return;
-    }
-
-    const itemGold = itemKK * 1000000;
-    let resultsHTML = "";
-    let cheapest = null;
+    let html = "";
 
     for(let i=1;i<=worldCount;i++){
-        const name = document.getElementById(`worldName${i}`).value;
-        const tcPrice = parseFloat(document.getElementById(`tcPrice${i}`).value);
 
-        if(!name || !tcPrice) continue;
+        const name = document.getElementById(`name${i}`).value;
+        const tcGold = parseFloat(document.getElementById(`tcGold${i}`).value);
+        const itemKK = parseFloat(document.getElementById(`itemKK${i}`).value);
+        const coin25 = parseFloat(document.getElementById(`coin25${i}`).value);
+        const includeTransfer = document.getElementById(`transfer${i}`).checked;
 
-        let tcNeeded = itemGold / tcPrice;
+        if(!name || !tcGold || !itemKK || !coin25) continue;
+
+        // Conversões
+        const itemGold = itemKK * 1000000;
+        const itemCoins = itemGold / tcGold;
+
+        const coinUnitValue = coin25 / 25;
+
+        const itemReais = itemCoins * coinUnitValue;
+
+        let transferCoins = 0;
+        let transferReais = 0;
 
         if(includeTransfer){
-            tcNeeded += 750;
+            transferCoins = 990;
+            transferReais = transferCoins * coinUnitValue;
         }
 
-        const reaisTotal = tcNeeded * tcReais;
+        const totalCoins = itemCoins + transferCoins;
+        const totalReais = itemReais + transferReais;
 
-        if(!cheapest || reaisTotal < cheapest.value){
-            cheapest = {name:name, value:reaisTotal};
-        }
-
-        resultsHTML += `
+        html += `
         <p>
-        <strong>${name}</strong><br>
-        TC necessárias: ${tcNeeded.toFixed(0)}<br>
-        Total em R$: ${reaisTotal.toFixed(2)}
+        <strong>${name}</strong><br><br>
+
+        🔹 Valor do Item em Coins: ${itemCoins.toFixed(0)}<br>
+        🔹 Valor do Item em R$: ${itemReais.toFixed(2)}<br><br>
+
+        🔹 Transfer em Coins: ${transferCoins.toFixed(0)}<br>
+        🔹 Transfer em R$: ${transferReais.toFixed(2)}<br><br>
+
+        🟢 TOTAL DE COINS: ${totalCoins.toFixed(0)}<br>
+        🟢 VALOR TOTAL EM R$: ${totalReais.toFixed(2)}
+
         </p>
+        <hr>
         `;
     }
 
-    if(cheapest){
-        resultsHTML += `<p class="best">Mundo mais barato: ${cheapest.name}</p>`;
-    }
-
-    document.getElementById("results").innerHTML = resultsHTML;
+    document.getElementById("results").innerHTML = html;
 }
 
 addWorld();
